# apartment-hunter

./: .env.example  .gitignore  .markdownlint.jsonc  .markdownlintignore  AGENTS.md  LEGAL.md  LEGAL.ru.md  LICENSE  README.md  README.ru.md  find_apts.py  pyproject.toml
.agents/skills/apartment-search/: SKILL.md
.agents/skills/apartment-search/agents/: openai.yaml
.agents/skills/apartment-search/references/: domain-glossary-kz.md
.agents/skills/apartment_search/: SKILL.md
.agents/skills/city-district-context-kz/: SKILL.md
.agents/skills/city-district-context-kz/agents/: openai.yaml
.agents/skills/html-report-generator/: SKILL.md
.agents/skills/html-report-generator/scripts/: generate.py
.github/workflows/: ci.yml
.serena/: project.yml
scripts/: cron.sh  find_apts.py
src/apartment_hunter/: __init__.py  __main__.py  config.py
src/apartment_hunter/adapters/: __init__.py
src/apartment_hunter/adapters/krisha/: adapter.py  parser.py  scraper.py
src/apartment_hunter/analysis/: embeddings.py  llm_analyzer.py  vision_analyzer.py
src/apartment_hunter/api/: app.py
src/apartment_hunter/core/: interfaces.py  models.py
src/apartment_hunter/ingest/: pipeline.py
src/apartment_hunter/mcp/: server.py
src/apartment_hunter/notifications/: telegram.py
src/apartment_hunter/storage/: factory.py  sqlite_store.py  vector_store.py
src/apartment_hunter/storage/connectors/: file.py  firebase.py  postgres.py  qdrant.py  supabase_store.py
src/krisha/common/: msg.py
src/krisha/config/: config.py  search.py
src/krisha/crawler/: first_page.py  flat_parser.py
src/krisha/exceptions/: crawler.py
tests/: test_adapters.py  test_analyzer.py  test_factory_and_vector.py  test_factory_lazy_imports.py  test_krisha_parser.py  test_models.py  test_pipeline.py  test_scraper.py  test_sqlite_store.py  test_storage_file.py  test_vision_analyzer.py
tests/fixtures/: fx_first_page.py
