[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-hunter"
version = "0.1.0"
description = "Universal apartment search platform with MCP server, RAG, and LLM analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # MCP
    "fastmcp>=2.3.0",
    # HTTP
    "httpx>=0.27",
    # Parsing
    "beautifulsoup4>=4.12",
    # Vector DB
    "chromadb>=1.0.0",
    # Embeddings
    "sentence-transformers>=3.0",
    # LLM
    "openai>=1.40",
    "anthropic>=0.34",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Config
    "pydantic-settings>=2.0",
    # Scheduling
    "apscheduler>=3.10",
    # Telegram
    "python-telegram-bot>=21.0",
    # Utilities
    "Pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "respx", "mypy", "black", "ruff"]
postgres = ["psycopg[binary]>=3.1"]
qdrant = ["qdrant-client>=1.7"]
supabase = ["supabase>=2.3"]
firebase = ["firebase-admin>=6.2"]
llm = ["instructor>=1.3", "google-generativeai>=0.5", "pydantic>=2.0"]

[project.scripts]
apartment-hunter-mcp = "apartment_hunter.mcp.server:main"
apartment-hunter-api = "apartment_hunter.api.app:main"
apartment-hunter-ingest = "apartment_hunter.ingest.pipeline:run_once_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
asyncio_mode = "auto"
addopts = ["-vv", "-p no:cacheprovider"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
