[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-hunter"
version = "0.1.0"
description = "Universal apartment search platform with MCP server, RAG, and LLM analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # MCP
    "fastmcp>=2.3.0",
    # HTTP
    "httpx>=0.27",
    # Parsing
    "beautifulsoup4>=4.12",
    # Vector DB
    "chromadb>=1.0.0",
    # Embeddings
    "sentence-transformers>=3.0",
    # LLM
    "openai>=1.40",
    "anthropic>=0.34",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Config
    "pydantic-settings>=2.0",
    # Scheduling
    "apscheduler>=3.10",
    # Utilities
    "Pillow>=10.0",
    "tqdm>=4.66",
    "cloakbrowser>=0.4.4",
    "playwright>=1.60.0",
    "colorlog>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "respx", "mypy", "ruff"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-mock", "respx"]
lint = ["mypy", "ruff"]
postgres = ["psycopg[binary]>=3.1"]
qdrant = ["qdrant-client>=1.7"]
supabase = ["supabase>=2.3"]
firebase = ["firebase-admin>=6.2"]
llm = ["instructor>=1.3", "google-generativeai>=0.5", "pydantic>=2.0"]

[project.scripts]
apartment-hunter-mcp = "apartment_hunter.mcp.server:main"
apartment-hunter-api = "apartment_hunter.api.app:main"
apartment-hunter-ingest = "apartment_hunter.ingest.pipeline:run_once_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
asyncio_mode = "auto"
addopts = ["-vv", "-p no:cacheprovider"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "src/apartment_hunter/api/.*",
    "src/apartment_hunter/analysis/.*",
    "src/apartment_hunter/storage/connectors/firebase.*",
    "src/apartment_hunter/storage/connectors/postgres.*",
    "src/apartment_hunter/storage/connectors/supabase.*",
    "src/apartment_hunter/storage/connectors/qdrant.*",
]

[[tool.mypy.overrides]]
module = [
    "apartment_hunter.api.*",
    "apartment_hunter.analysis.*",
    "apartment_hunter.storage.connectors.firebase",
    "apartment_hunter.storage.connectors.postgres",
    "apartment_hunter.storage.connectors.supabase_store",
    "apartment_hunter.storage.connectors.qdrant",
]
ignore_errors = true

[tool.coverage.run]
source = ["src/apartment_hunter"]
omit = [
    "src/apartment_hunter/__main__.py",
    "src/apartment_hunter/analysis/embeddings.py",
    "src/apartment_hunter/api/*",
    "src/apartment_hunter/mcp/*",
    "src/apartment_hunter/notifications/*",
    "src/apartment_hunter/storage/connectors/firebase.py",
    "src/apartment_hunter/storage/connectors/postgres.py",
    "src/apartment_hunter/storage/connectors/qdrant.py",
    "src/apartment_hunter/storage/connectors/supabase_store.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
